--- a/index.html
+++ b/index.html
@@ -1,15 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
-  
+  <div class="container">
+    <div class="left-side">
+      <img src="./illustration(1).svg" alt="">
+    </div>
+    <div class="right-side">
+      <div class="login">
+        <h2>Bem vindo de volta</h2>
+        <h1>Faça login na sua conta</h1>
+
+        <form action="">
+          <label for="email">E-mail</label>
+          <input type="email" name="email" value="codelandia@gmail.com">
+          <label for="password">Senha</label>
+          <input type="password" name="password" value="*********">
+        </form>
+        <div class="login-options">
+          <div>
+            <input type="checkbox" name="checkbox" id="checkbox">
+            <label for="checkbox">Lembre para mim</label>
+          </div>
+          <a href="#">Esqueceu sua senha? </a>
+        </div>
+
+        <button class="enter">Entrar</button>
+        <button class="enter-google">Ou faça login com o Google </button>
+      </div>
+      <div class="create-account">
+        <p>Não tem uma conta? <a href="">Cadastre-se</a></p>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
