--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <button class="enter">Entrar</button>
-        <button class="enter-google">Ou faça login com o Google </button>
+        <button class="enter-google"><img src="./iconfinder_Google_1298745 1.svg" alt="">Ou faça login com o Google </button>
       </div>
       <div class="create-account">
         <p>Não tem uma conta? <a href="">Cadastre-se</a></p>
